--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </nav>
         <div class="left-container">
             <div class="icons">
-                <i class="fa-brands fa-x-twitter"></i>  
-                <i class="fa-brands fa-linkedin-in"></i>
-                <i class="fa-brands fa-github"></i>
+                <a href="https://twitter.com/amberkatyal" target="_blank"><i class="fa-brands fa-x-twitter"></a></i></a>
+                <a href="https://www.linkedin.com/in/amberkatyal/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/amberkatyal/" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
             <div class="content">
                 <p class="intro">Hi! I am <span>Amber Katyal</span></p>
