updating detail info.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="content">
                 <p class="intro">Hi! I am <span>Amber Katyal</span></p>
                 <h1>iOS Developer.</h1>
-                <p class="detail">Curious and enthusiastic developer with 7 years of industry experience.</p>
+                <p class="detail">Curious and enthusiastic developer with 7 years of industry experience into native iOS and tvOS.</p>
             <div class="content-buttons">
                 <button>Hire Me!</button>
                 <button>View Projects </button>
