avoiding right click on profile image div

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         </div>
         <div class="right-container">
-        <div class="design">
+        <div class="design" oncontextmenu="return false">
             <div class="circle"></div>
             <div class="circle"></div>
         </div>
