updating profile pic

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image"  oncontextmenu="return false">
-                        <img src="images/profile_pic.jpg" alt="avatar">
+                        <img src="images/profile.jpeg" alt="avatar">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
