updating text and image

--- a/index.html
+++ b/index.html
@@ -116,10 +116,9 @@
                     <div class="col">
                         <div class="about-info">
                             <h3>My introduction</h3>
-                            <p>I am well-versed in HTML, CSS and JavaScript , and other cutting edge
-                                frameworks and libraries,which allows me to implement interactive features.
-                                Additionally, I have experirence working with content management systems (CMS) like
-                                WordPress.
+                            <p>I am well-versed in Swift, SwiftUI, ObjectiveC, RxSwift, Combine, CSS and other cutting edge
+                                frameworks and libraries, which allows me to implement interactive features.
+                                Additionally, I have experience working DRM protected custom Media Players, In App Purchases and Push Notifications.
                             </p>
                             <div class="about-btn">
                                 <button class="btn">Download CV <i class="uil uil-import"></i></button>
@@ -129,37 +128,44 @@
                     <div class="col">
                         <div class="skills-box">
                             <div class="skills-header">
-                                <h3>Frontend</h3>
+                                <h3>Skills</h3>
                             </div>
                             <div class="skills-list">
-                                <span>HTML</span>
+                                <span>Swift</span>
+                                <span>Objective C</span>
                                 <span>CSS</span>
-                                <span>Bootstrap</span>
                                 <span>JavaScript</span>
-                                <span>Vue</span>
-                                <span>React</span>
-                                <span>Angular</span>
+                                <span>Java</span>
+                                <span>React Native</span>
+                                <span>Flutter</span>
                             </div>
                         </div>
                         <div class="skills-box">
                             <div class="skills-header">
-                                <h3>Backend</h3>
+                                <h3>Tools & Technologies</h3>
                             </div>
                             <div class="skills-list">
-                                <span>PHP</span>
-                                <span>JAVA</span>
-                                <span>Python</span>
-                                <span>C++</span>
+                                <span>Xcode</span>
+                                <span>Git</span>
+                                <span>VS Code</span>
+                                <span>Xcodegen</span>
+                                <span>SOLID</span>
+                                <span>TDD</span>
+                                <span>MVVM</span>
+                                <span>VIPER</span>
                             </div>
                         </div>
                         <div class="skills-box">
                             <div class="skills-header">
-                                <h3>Database</h3>
+                                <h3>Frameworks</h3>
                             </div>
                             <div class="skills-list">
-                                <span>MySQL</span>
-                                <span>PostgreSQL</span>
-                                <span>MongoDB</span>
+                                <span>Core Data</span>
+                                <span>SwiftUI</span>
+                                <span>Combine</span>
+                                <span>Firebase</span>
+                                <span>Fariplay</span>
+                                <span>AVFoundation</span>
                             </div>
                         </div>
                     </div>
@@ -176,12 +182,12 @@
                     <div class="project-box">
                         <i class="uil uil-briefcase-alt"></i>
                         <h3>Completed</h3>
-                        <label>15+ Finished Projects</label>
+                        <label>10+ Finished Projects</label>
                     </div>
                     <div class="project-box">
                         <i class="uil uil-users-alt"></i>
                         <h3>Clients</h3>
-                        <label>25+ Happy Clients</label>
+                        <label>10+ Happy Clients</label>
                     </div>
                     <div class="project-box">
                         <i class="uil uil-award"></i>
@@ -202,8 +208,8 @@
                     <div class="col">
                         <div class="contact-info">
                             <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: john@doe.com</p>
-                            <p><i class="uil uil-phone"></i> +91 70822 00001</p>
+                            <p><i class="uil uil-envelope"></i> Email: amber.iosdev@gmail.com</p>
+                            <!-- <p><i class="uil uil-phone"></i> +91 70822 00001</p> -->
                         </div>
                     </div>
                     <div class="col">
@@ -229,7 +235,7 @@
         <!-- --------------- FOOTER --------------- -->
         <footer>
             <div class="top-footer">
-                <p>John Doe .</p>
+                <p>Amber Katyal .</p>
             </div>
             <div class="middle-footer">
                 <ul class="footer-menu">
@@ -254,7 +260,7 @@
                 <div class="icon"><i class="uil uil-github-alt"></i></div>
             </div>
             <div class="bottom-footer">
-                <p>Copyright &copy; <a href="#home" style="text-decoration: none;">John Doe</a> - All rights reserved
+                <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Amber Katyal</a> - All rights reserved
                 </p>
             </div>
         </footer>
