--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="featured-image">
-                    <div class="image"  oncontextmenu="return false">
+                    <div class="image" oncontextmenu="return false">
                         <img src="images/profile.jpeg" alt="avatar">
                     </div>
                 </div>
@@ -116,9 +116,11 @@
                     <div class="col">
                         <div class="about-info">
                             <h3>My introduction</h3>
-                            <p>I am well-versed in Swift, SwiftUI, ObjectiveC, RxSwift, Combine, CSS and other cutting edge
+                            <p>I am well-versed in Swift, SwiftUI, ObjectiveC, RxSwift, Combine, CSS and other cutting
+                                edge
                                 frameworks and libraries, which allows me to implement interactive features.
-                                Additionally, I have experience working DRM protected custom Media Players, In App Purchases and Push Notifications.
+                                Additionally, I have experience working DRM protected custom Media Players, In App
+                                Purchases and Push Notifications.
                             </p>
                             <div class="about-btn">
                                 <button class="btn">Download CV <i class="uil uil-import"></i></button>
@@ -199,7 +201,7 @@
 
             <!-- -------------- CONTACT BOX ---------------- -->
 
-            <section class="section" id="contact">
+            <section class="section">
                 <div class="top-header">
                     <h1>Get in touch</h1>
                     <span>Do you have a project in your mind, contact me here</span>
@@ -213,18 +215,20 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="form-control">
-                            <div class="form-inputs">
-                                <input type="text" class="input-field" placeholder="Name">
-                                <input type="text" class="input-field" placeholder="Email">
+                        <form id="contactForm">
+                            <div class="form-control">
+                                <div class="form-inputs">
+                                    <input type="text" class="input-field" placeholder="Name" id="name">
+                                    <input type="text" class="input-field" placeholder="Email" id="email">
+                                </div>
+                                <div class="text-area">
+                                    <textarea placeholder="Message" id="message"></textarea>
+                                </div>
+                                <div class="form-button">
+                                    <button type="submit" class="btn">Send <i class="uil uil-message"></i></button>
+                                </div>
                             </div>
-                            <div class="text-area">
-                                <textarea placeholder="Message"></textarea>
-                            </div>
-                            <div class="form-button">
-                                <button class="btn">Send <i class="uil uil-message"></i></button>
-                            </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </section>
@@ -260,7 +264,8 @@
                 <div class="icon"><i class="uil uil-github-alt"></i></div>
             </div>
             <div class="bottom-footer">
-                <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Amber Katyal</a> - All rights reserved
+                <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Amber Katyal</a> - All rights
+                    reserved
                 </p>
             </div>
         </footer>
@@ -275,6 +280,58 @@
 
     <!-- ----- MAIN JS ----- -->
     <script src="./script.js"></script>
+
+    <!-- ----- Contact Form JS ----- -->
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js'
+        import { getAnalytics } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js'
+        import { getDatabase, ref, set } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-database.js'
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyDwB5fF0rAi-p7vnGOaHBclcAfR0J0pRvI",
+            authDomain: "portfolio-8df93.firebaseapp.com",
+            databaseURL: "https://portfolio-8df93-default-rtdb.asia-southeast1.firebasedatabase.app/",
+            projectId: "portfolio-8df93",
+            storageBucket: "portfolio-8df93.appspot.com",
+            messagingSenderId: "304422127041",
+            appId: "1:304422127041:web:faa244f2e1e5e63e83db40",
+            measurementId: "G-35D59X066F"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+
+        const database = getDatabase(app);
+
+        document.getElementById('contactForm')
+            .addEventListener('submit', submitForm);
+
+        function submitForm(e) {
+            e.preventDefault();
+
+            // Get values
+            var name = getInputVal('name');
+            var email = getInputVal('email');
+            var message = getInputVal(`message`);
+            console.log(name, email, message);
+            saveMessage(name, email, message);
+            document.getElementById('contactForm').reset();
+        }
+
+        // Function to get form values
+        function getInputVal(id) {
+            return document.getElementById(id).value;
+        }
+
+        // Save message to firebase
+        function saveMessage(name, email, message) {
+            set(ref(database, 'contacts/' + name), {
+                username: name,
+                email: email,
+                message: message
+            });
+        }
+    </script>
 </body>
 
 </html>
